# multi-session

./: CLAUDE.md  Cargo.toml  HOW-IT-WORKS.md  LICENSE  README.md  install.sh  jc-port-analysis.md  jc-port-execution-plan.md  warp-features-analysis.md  warp-features-plan.md
.claude/rules/: 01-jc-core-sacred.md  02-no-gpui.md  03-platform-abstraction.md  04-iced-architecture.md  05-rust-conventions.md  06-terminal-porting.md  07-wsl2-awareness.md  08-upstream-sync.md
docs/: WSL2-GUIDE.md
jc-app/: Cargo.toml  jc.desktop
jc-app/src/: app.rs  app_config.rs  language.rs  main.rs  outline.rs  session_persistence.rs
jc-app/src/views/: code_view.rs  diff_view.rs  keybinding_help.rs  mod.rs  pane.rs  picker.rs  project_state.rs  session_state.rs  terminal_canvas.rs  todo_view.rs
jc-app/src/views/workspace/: keybindings.rs  mod.rs  problems.rs  render.rs  terminal_input.rs
jc-platform/: Cargo.toml
jc-platform/src/: ipc.rs  lib.rs  notifications.rs  signals.rs
jc-terminal/: Cargo.toml
jc-terminal/src/: colors.rs  input.rs  lib.rs  render.rs  terminal.rs
