[package]
name = "jc-app"
version = "0.1.0"
edition.workspace = true

[dependencies]
jc-core.workspace = true
jc-platform.workspace = true
jc-terminal.workspace = true
iced.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
flume.workspace = true
git2.workspace = true
notify.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-md.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
diffy.workspace = true
similar.workspace = true
arboard.workspace = true
parking_lot.workspace = true
log.workspace = true
alacritty_terminal.workspace = true
toml.workspace = true
dirs.workspace = true
